# HaakimFYP

./: .gitignore  HaakimFYP.ipynb  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.py  organize_data.py  predict_realtime.py  prepare_data.py  smoke_imports.py  train.py  write_labels_map.py
stretch_detector/: config.py
stretch_detector/data/: frame_extractor.py  video_dataset.py
stretch_detector/eval/: evaluate.py
stretch_detector/inference/: realtime.py
stretch_detector/models/: callbacks.py  cnn3d.py  cnn_lstm.py
stretch_detector/training/: train_cnn3d.py  train_cnn_lstm.py
stretch_detector/utils/: plotting.py
tests/: conftest.py  test_config.py  test_dataset.py  test_inference.py  test_models.py
