[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stretch-detector"
version = "0.1.0"
description = "ML project for detecting stretching in videos using CNN+LSTM and 3D-CNN models."
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.8,<3.9",
    "moviepy>=1.0.3,<3.0",
    "numpy>=1.26,<2.0",          # Compatible with TF 2.16.x
    "opencv-python>=4.8,<5.0",
    "pandas>=2.2,<2.3",
    "pillow>=10,<12",
]

[project.optional-dependencies]
tf = [
    "tensorflow-macos==2.16.2; sys_platform == 'darwin'",  # Python 3.11 compatible
    "tensorflow-metal==1.2.0; sys_platform == 'darwin'",   # Matches TF 2.16.x
    "tensorflow==2.16.2; sys_platform != 'darwin'",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.10",
]

[project.scripts]
stretch-detector-prepare = "scripts.prepare_data:main"
stretch-detector-train = "scripts.train:main"
stretch-detector-evaluate = "scripts.evaluate:main"
stretch-detector-predict = "scripts.predict_realtime:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build]
include = [
  "stretch_detector",
  "scripts",
  "README.md",
]

[tool.hatch.metadata]
allow-direct-references = true
